k8s/qas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: energie-welt
  namespace: energie-welt-qas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qas.energie-welt.ch
      secretName: qas-energie-welt-ch-tls
  rules:
    - host: qas.energie-welt.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
